--- a/src/main/resources/templates/client/all.html
+++ b/src/main/resources/templates/client/all.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<div layout:fragment="content">
     <table>
         <thead>
             <tr>
@@ -25,5 +28,6 @@
             </tr>
         </tbody>
     </table>
+</div>
 </body>
 </html>
