--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -39,6 +39,17 @@
           </ul>
         </li>
 
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+             aria-expanded="false">
+            Purchase
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" th:href="@{/purchase/all}">All</a></li>
+            <li><a class="dropdown-item" th:href="@{/purchase/new}">Create</a></li>
+          </ul>
+        </li>
+
       </ul>
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
