--- a/src/main/resources/templates/purchase/update.html
+++ b/src/main/resources/templates/purchase/update.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="~{layout}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+<div layout:fragment="content">
+    <form th:action="@{'/purchase/update/'+ ${ purchase.id }}" method="post" th:object="${purchase}">
+        <input  class="form-control" type="date" placeholder="date" th:field="*{date}"><br>
+        <input  class="form-control" type="number" placeholder="total" th:field="*{total}"><br>
+        <select  class="form-control" th:field="*{client}">
+            <th:block th:each="client : ${clients}">
+                <option th:text="${client.name}" th:value="${client.id}"></option>
+            </th:block>
+        </select>
+        <input type="submit" th:value="Update">
+    </form>
+</div>
 
 </body>
 </html>
